# storyos-kids

./: .gitignore  README.md  pyproject.toml
config/: generation.toml
docs/: CURRENT_TASK.md  RUN_LOG.md  SOURCES_OF_TRUTH.md
generation/: __init__.py  config.py  generate.py  models.py  prompt.py
scripts/: generate_demo.py  seed_demo.py
tests/: conftest.py  test_changeset_lifecycle.py  test_cli.py  test_generation.py  test_generation_config_prompt.py  test_mutations_and_atomicity.py  test_reads_audit_export.py  test_schema.py  test_schema_and_worlds.py  test_store.py  test_world_slice.py
worldstate/: __init__.py  cli.py  db.py  models.py  repository.py  schema.sql  store.py
