[project]
name = "storyos-worldstate"
version = "0.1.0"
description = "World-State Backbone: persistent canon layer for storyos-kids."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
