[project]
name = "storyos-worldstate"
version = "0.1.0"
description = "World-State Backbone + Stage 1 generation for storyos-kids."
requires-python = ">=3.11"   # stdlib tomllib
dependencies = ["anthropic>=0.40"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
